--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         </p>
     </main>
     <footer>
-        <p>Site criado por Gabiroba para o CursoemVideo.</p>
+        <p>Site criado por <a href="https://github.com/yanmatos31/projeto-cordel">Gabiroba</a> para o CursoemVideo.</p>
     </footer>
 </body>
 </html>
