--- a/index.html
+++ b/index.html
@@ -10,19 +10,21 @@
 <body>
     <header>
         <h1>Cordel Moderno</h1>
-        <p>Por <strong>Milton Cardoso</strong></p>
+        <p>Por <a href="https://www.recantodasletras.com.br/poesias/3186743" target="_blank">Milton Cardoso</a></p>
     </header>
     <main>
-        <p>
-            Estou ficando cansado <br/>
-            Da tal tecnologia<br/>
-            Só se fala por e-mail<br/>
-            Mensagem curta e fria<br/>
-            Twitter e Facebook<br/>
-            Antes que eu caduque<br/>
-            Vou dizer tudo em poesia.<br/>
-        </p>
-        <div id="joana">
+        <section>
+            <p>
+                Estou ficando cansado <br/>
+                Da tal tecnologia<br/>
+                Só se fala por e-mail<br/>
+                Mensagem curta e fria<br/>
+                Twitter e Facebook<br/>
+                Antes que eu caduque<br/>
+                Vou dizer tudo em poesia.
+            </p>
+        </section>
+        <section id="joana" class="imagem">
             <p>
                 Não é mais como era antes<br/>
                 É tudo abreviado<br/>
@@ -30,28 +32,33 @@
                 O "O" e o "E" foi riscado<br/>
                 Para declarar o amor<br/>
                 Basta botar uma flor<br/>
-                E um coração desenhado.<br/>
+                E um coração desenhado.
             </p>
             
-        </div>
-        <p>
-            Arroba agora não pesa<br/>
-            É parte de um endereço<br/>
-            Ponto final nem se usa<br/>
-            Ou vai até no começo<br/>
-            Agora é .com<br/>
-            Se o saite é muito bom<br/>
-            Ele vale um alto preço.<br/>
-
-            <br/>Pra piorar a liguagem<br/>
-            O emoticom é um risco<br/>
-            Tem símbolo para tudo<br/>
-            Ponto e vírgula e um asterisco<br/>
-            Um beijo significa<br/>
-            Pra entender como fica<br/>
-            Decifre esse rabisco.<br/>
-        </p>
-        <div id="folha">
+        </section>
+        <section>
+            <p>
+                Arroba agora não pesa<br/>
+                É parte de um endereço<br/>
+                Ponto final nem se usa<br/>
+                Ou vai até no começo<br/>
+                Agora é .com<br/>
+                Se o saite é muito bom<br/>
+                Ele vale um alto preço.
+            </p>
+        </section>
+        <section>
+            <p>
+                Pra piorar a liguagem<br/>
+                O emoticom é um risco<br/>
+                Tem símbolo para tudo<br/>
+                Ponto e vírgula e um asterisco<br/>
+                Um beijo significa<br/>
+                Pra entender como fica<br/>
+                Decifre esse rabisco.
+            </p>
+        </section>
+        <section id="folha" class="imagem">
             <p>
                 Tenho saudade das cartas<br/>
                 Escritas com a própria mão<br/>
@@ -61,27 +68,30 @@
                 Era texto de verdade<br/>
                 Nas linhas do coração.<br/>
             </p>
-        </div>
-        <p>
-            Agora, escrevo e envio<br/>
-            Chegando na mesma hora<br/>
-            Mas quando vou prosear<br/>
-            A pessoa foi embora<br/>
-            Abriu outro aplicativo<br/>
-            O mundo ficou cativo<br/>
-            Da tecnologia do agora.<br/>
-
-            <br/>Felizmente, pra orar<br/>
-            Não precisa de internet<br/>
-            Deus escuta todo mundo<br/>
-            Se quiser, faça esse teste<br/>
-            Dois pontos são dois joelhos<br/>
-            Seus lábios são aparelhos<br/>
-            Deixe que Deus interprete.<br/>
-        </p>
+        </section>
+        <section>
+            <p>
+                Agora, escrevo e envio<br/>
+                Chegando na mesma hora<br/>
+                Mas quando vou prosear<br/>
+                A pessoa foi embora<br/>
+                Abriu outro aplicativo<br/>
+                O mundo ficou cativo<br/>
+                Da tecnologia do agora.<br/>
+            </p>
+            <p>
+                Felizmente, pra orar<br/>
+                Não precisa de internet<br/>
+                Deus escuta todo mundo<br/>
+                Se quiser, faça esse teste<br/>
+                Dois pontos são dois joelhos<br/>
+                Seus lábios são aparelhos<br/>
+                Deixe que Deus interprete.<br/>
+            </p>
+        </section>
     </main>
     <footer>
-        <p>Site criado por <a href="https://github.com/yanmatos31/projeto-cordel">Gabiroba</a> para o CursoemVideo.</p>
+        <p>Site criado por <a href="https://github.com/yanmatos31/projeto-cordel" target="_blank">Gabiroba</a> para o CursoemVideo.</p>
     </footer>
 </body>
 </html>
